[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xborders"
version = "3.5"
description = "Active window border replacement for window managers."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "pygobject==3.50.0",
    "pycairo==1.27.0",
    "requests==2.32.3",
    "zc.lockfile==3.0.post1"
]

[project.scripts]
xborders = "xborders.main:main"
